# rust-exercism-cubicle

./: .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  exercises  exercises.js  exercises.json
.circleci/: config.yml
.devcontainer/: devcontainer.json
exercises/accumulate/src/: lib.rs
exercises/accumulate/tests/: accumulate.rs
exercises/acronym/src/: lib.rs
exercises/acronym/tests/: acronym.rs
exercises/all-your-base/tests/: all-your-base.rs
exercises/allergies/tests/: allergies.rs
exercises/alphametics/src/: lib.rs
exercises/anagram/tests/: anagram.rs
exercises/armstrong-numbers/src/: lib.rs
exercises/armstrong-numbers/tests/: armstrong-numbers.rs
exercises/atbash-cipher/tests/: atbash-cipher.rs
exercises/beer-song/src/: lib.rs
exercises/beer-song/tests/: beer-song.rs
exercises/binary-search/src/: lib.rs
exercises/binary-search/tests/: binary-search.rs
exercises/bob/benches/: benchmark.rs
exercises/bob/src/: lib.rs
exercises/bob/tests/: bob.rs
exercises/book-store/tests/: book-store.rs
exercises/bowling/src/: lib.rs
exercises/bowling/tests/: bowling.rs
exercises/bracket-push/src/: lib.rs
exercises/bracket-push/tests/: bracket-push.rs
exercises/circular-buffer/tests/: circular-buffer.rs
exercises/clock/src/: lib.rs
exercises/clock/tests/: clock.rs
exercises/collatz-conjecture/tests/: collatz-conjecture.rs
exercises/crypto-square/tests/: crypto-square.rs
exercises/custom-set/tests/: custom-set.rs
exercises/decimal/tests/: decimal.rs
exercises/diamond/tests/: diamond.rs
exercises/difference-of-squares/src/: lib.rs
exercises/difference-of-squares/tests/: difference-of-squares.rs
exercises/diffie-hellman/tests/: diffie-hellman.rs
exercises/dominoes/tests/: dominoes.rs
exercises/dot-dsl/src/: lib.rs
exercises/dot-dsl/tests/: dot-dsl.rs
exercises/etl/src/: lib.rs
exercises/etl/tests/: etl.rs
exercises/forth/tests/: forth.rs
exercises/gigasecond/src/: lib.rs
exercises/gigasecond/tests/: gigasecond.rs
exercises/grade-school/src/: lib.rs
exercises/grade-school/tests/: grade-school.rs
exercises/grains/src/: lib.rs
exercises/grep/tests/: grep.rs
exercises/hamming/tests/: hamming.rs
exercises/hello-world/tests/: hello-world.rs
exercises/hexadecimal/tests/: hexadecimal.rs
exercises/isbn-verifier/tests/: isbn-verifier.rs
exercises/isogram/tests/: isogram.rs
exercises/largest-series-product/tests/: largest-series-product.rs
exercises/leap/src/: lib.rs
exercises/leap/tests/: leap.rs
exercises/luhn-from/tests/: luhn-from.rs
exercises/luhn-trait/tests/: luhn-trait.rs
exercises/luhn/tests/: luhn.rs
exercises/macros/tests/: macros.rs
wasm/: package-lock.json  webpack.config.js
wasm/crate/: Cargo.toml
(+64 files in other folders)
