[workspace]

members = [
    "exercises/accumulate",
    "exercises/acronym",
    "exercises/all-your-base",
    "exercises/allergies",
    "exercises/alphametics",
    "exercises/anagram",
    "exercises/armstrong-numbers",
    "exercises/atbash-cipher",
    "exercises/beer-song",
    "exercises/binary-search",
    "exercises/bob",
    "exercises/book-store",
    "exercises/bowling",
    "exercises/bracket-push",
    "exercises/circular-buffer",
    "exercises/clock",
    "exercises/collatz-conjecture",
    "exercises/crypto-square",
    "exercises/custom-set",
    "exercises/decimal",
    "exercises/diamond",
    "exercises/difference-of-squares",
    "exercises/diffie-hellman",
    "exercises/dominoes",
    "exercises/dot-dsl",
    "exercises/etl",
    "exercises/forth",
    "exercises/gigasecond",
    "exercises/grade-school",
    "exercises/grains",
    "exercises/grep",
    "exercises/hamming",
    "exercises/hello-world",
    "exercises/hexadecimal",
    "exercises/isbn-verifier",
    "exercises/isogram",
    "exercises/largest-series-product",
    "exercises/leap",
    "exercises/luhn",
    "exercises/luhn-from",
    "exercises/luhn-trait",
    "exercises/macros",
    "exercises/minesweeper",
    "exercises/nth-prime",
    "exercises/nucleotide-codons",
    "exercises/nucleotide-count",
    "exercises/ocr-numbers",
    "exercises/paasio",
    "exercises/palindrome-products",
    "exercises/pangram",
    "exercises/parallel-letter-frequency",
    "exercises/pascals-triangle",
    "exercises/perfect-numbers",
    "exercises/phone-number",
    "exercises/pig-latin",
    "exercises/poker",
    "exercises/prime-factors",
    "exercises/protein-translation",
    "exercises/proverb",
    "exercises/pythagorean-triplet",
    "exercises/queen-attack",
    "exercises/rail-fence-cipher",
    "exercises/raindrops",
    "exercises/react",
    "exercises/rectangles",
    "exercises/reverse-string",
    "exercises/rna-transcription",
    "exercises/robot-name",
    "exercises/robot-simulator",
    "exercises/roman-numerals",
    "exercises/rotational-cipher",
    "exercises/run-length-encoding",
    "exercises/saddle-points",
    "exercises/say",
    "exercises/scale-generator",
    "exercises/scrabble-score",
    "exercises/series",
    "exercises/sieve",
    "exercises/simple-cipher",
    "exercises/simple-linked-list",
    "exercises/space-age",
    "exercises/spiral-matrix",
    "exercises/sublist",
    "exercises/sum-of-multiples",
    "exercises/tournament",
    "exercises/triangle",
    "exercises/two-bucket",
    "exercises/two-fer",
    "exercises/variable-length-quantity",
    "exercises/word-count",
    "exercises/wordy"
]